fixed code readability

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   --foreground: #171717;
 }
 
-@theme inline {
+:root {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: "Rubik", "Helvetica", "Arial", sans-serif;
